--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,7 @@
 .mainProject{
   background: url(../public/fondo-e-comerce.png) top left/cover;
   background-repeat: no-repeat;
-  height: 100vh;
+  
 }
 .navContainer {
   width: 100%;
@@ -14,7 +14,6 @@
   justify-content: space-around;
   padding: 24px 40px;
 }
-
 .aLink {
   cursor: pointer;
   text-decoration: none;
@@ -29,6 +28,14 @@
 }
 .itemContainer{
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  align-items: center;
   margin: 0 20em;
+}
+.itemListContainer{
+  border: 1px solid black;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 0.4em;
+  
 }
